--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/action_search"
         android:icon="@android:drawable/ic_search_category_default"
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_add"
+        android:id="@+id/action_add"
         android:icon="@android:drawable/ic_input_add"
         android:title="@string/title_add" />
 
     <item
-        android:id="@+id/navigation_info"
+        android:id="@+id/action_info"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_info" />
 
