--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:id="@+id/back"
         android:layout_width="0dp"
-        android:layout_height="359dp"
+        android:layout_height="260dp"
         android:layout_marginEnd="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
@@ -30,60 +30,36 @@
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_marginBottom="0dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="10dp"
-            android:padding="10dp"
+            android:paddingLeft="20dp"
+            android:paddingTop="14dp"
             android:text="Tytuł:"
             android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:layout_weight="1" />
+            android:textSize="18sp" />
 
         <SearchView
             android:id="@+id/title_filter"
             android:layout_width="320dp"
             android:layout_height="45dp"
             android:layout_marginBottom="15dp"
-            android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
-            android:layout_weight="1" />
-
-        <TextView
-            android:id="@+id/kategoria"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
-            android:padding="10dp"
-            android:text="Kategoria:"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
+            android:layout_marginLeft="15dp" />
 
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/search_category"
             android:layout_width="320dp"
             android:layout_height="45dp"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="15dp" />
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:padding="10dp"
-            android:text="Śpiewnik:"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
+            android:background="@android:drawable/btn_dropdown" />
 
         <Spinner
-            android:id="@+id/spinner2"
-            android:layout_width="match_parent"
+            android:id="@+id/search_place"
+            android:layout_width="320dp"
             android:layout_height="45dp"
-            android:layout_margin="15dp" />
+            android:layout_margin="15dp"
+            android:background="@android:drawable/btn_dropdown" />
 
     </LinearLayout>
 
@@ -93,11 +69,12 @@
         android:layout_height="50dp"
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="114dp"
         android:background="#5fcb34"
         android:text="Wyświetl"
         android:textColor="@android:color/white"
         android:textSize="18sp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/back"
