--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -33,19 +33,22 @@
             android:layout_marginEnd="15dp"
             android:layout_marginStart="15dp"
             android:layout_marginTop="10dp"
+            android:paddingEnd="20dp"
             android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingStart="20dp"
             android:paddingTop="14dp"
-            android:text="Tytuł:"
+            android:text="Podaj tytuł utworu lub słowo:"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
 
-        <SearchView
+        <EditText
             android:id="@+id/title_filter"
-            android:layout_width="320dp"
-            android:layout_height="45dp"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="15dp" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:ems="10"
+            android:inputType="textPersonName" />
 
         <Spinner
             android:id="@+id/search_category"
