--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -86,28 +86,17 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="45dp"
-        android:layout_marginRight="6dp"
         android:padding="10dp"
         android:text="Śpiewnik"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        app:layout_constraintRight_toLeftOf="@+id/editText_place"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        android:layout_marginEnd="6dp" />
-
-    <EditText
-        android:id="@+id/editText_place"
-        android:layout_width="0dp"
-        android:layout_height="45dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintTop_toBottomOf="@+id/editText_title"
         tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/editText_title"
+        app:layout_constraintRight_toRightOf="@+id/textView2"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/editText_title" />
+        app:layout_constraintLeft_toLeftOf="@+id/textView2" />
 
     <EditText
         android:id="@+id/editText_nr"
@@ -124,14 +113,19 @@
     <EditText
         android:id="@+id/editText_page"
         android:layout_width="0dp"
-        android:layout_height="45dp"
+        android:layout_height="46dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintTop_toBottomOf="@+id/editText_place"
         tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/editText_place"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/editText_place" />
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="@+id/textView5"
+        app:layout_constraintRight_toRightOf="@+id/spinner2"
+        android:layout_marginTop="45dp"
+        android:layout_marginBottom="44dp"
+        app:layout_constraintLeft_toLeftOf="@+id/spinner2"
+        app:layout_constraintTop_toTopOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/textView7"
@@ -179,7 +173,7 @@
         android:layout_marginEnd="100dp"
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
-        android:layout_marginStart="110dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="27dp"
         android:background="#5fcb34"
         android:text="Dodaj"
@@ -203,6 +197,17 @@
         tools:layout_constraintRight_creator="1"
         app:layout_constraintRight_toRightOf="@+id/editText_nr"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/editText_nr" />
+        app:layout_constraintLeft_toLeftOf="@+id/editText_nr"
+        app:layout_constraintHorizontal_bias="0.0" />
+
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="0dp"
+        android:layout_height="45dp"
+        app:layout_constraintBottom_toTopOf="@+id/editText_page"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/editText_title"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/editText_title" />
 
 </android.support.constraint.ConstraintLayout>
