--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -25,7 +25,21 @@
         tools:layout_constraintRight_creator="1"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        tools:layout_constraintLeft_creator="1"></LinearLayout>
+        tools:layout_constraintLeft_creator="1">
+
+    </LinearLayout>
+
+    <EditText
+        android:id="@+id/editText_chords"
+        android:layout_width="0dp"
+        android:layout_height="45dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintTop_toBottomOf="@+id/editText_lyrics"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="@+id/editText_lyrics"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/editText_lyrics" />
 
     <EditText
         android:id="@+id/editText_title"
@@ -63,10 +77,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/guideline3"
-        app:layout_constraintGuide_begin="31dp"
+        app:layout_constraintGuide_begin="25dp"
         android:orientation="vertical"
         tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="31dp" />
+        tools:layout_editor_absoluteX="25dp" />
 
     <TextView
         android:id="@+id/textView2"
@@ -123,22 +137,22 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintRight_toRightOf="@+id/spinner2"
         android:layout_marginTop="45dp"
-        android:layout_marginBottom="44dp"
+        android:layout_marginBottom="45dp"
         app:layout_constraintLeft_toLeftOf="@+id/spinner2"
         app:layout_constraintTop_toTopOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="100dp"
-        android:layout_height="135dp"
+        android:layout_height="85dp"
+        android:layout_marginEnd="6dp"
         android:layout_marginRight="6dp"
         android:padding="10dp"
         android:text="Tekst"
         android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintRight_toLeftOf="@+id/editText_lyrics"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        android:layout_marginEnd="6dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <TextView
         android:id="@+id/textView6"
@@ -164,7 +178,21 @@
         android:textSize="18sp"
         app:layout_constraintRight_toLeftOf="@+id/editText_nr"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
-        android:layout_marginEnd="6dp" />
+        android:layout_marginEnd="6dp"
+        android:layout_marginTop="1dp" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="100dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginRight="6dp"
+        android:padding="10dp"
+        android:text="Akordy"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        app:layout_constraintRight_toLeftOf="@+id/editText_chords"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <Button
         android:id="@+id/button_add"
@@ -174,7 +202,7 @@
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="27dp"
+        android:layout_marginTop="17dp"
         android:background="#5fcb34"
         android:text="Dodaj"
         android:textColor="@android:color/white"
@@ -190,24 +218,24 @@
     <EditText
         android:id="@+id/editText_lyrics"
         android:layout_width="0dp"
-        android:layout_height="135dp"
+        android:layout_height="85dp"
         android:ems="10"
         android:inputType="textMultiLine"
-        app:layout_constraintTop_toBottomOf="@+id/editText_nr"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/editText_nr"
-        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/editText_nr"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintRight_toRightOf="@+id/editText_nr"
+        app:layout_constraintTop_toBottomOf="@+id/editText_nr"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
 
     <Spinner
         android:id="@+id/spinner2"
         android:layout_width="0dp"
         android:layout_height="45dp"
         app:layout_constraintBottom_toTopOf="@+id/editText_page"
-        tools:layout_constraintRight_creator="1"
+        app:layout_constraintLeft_toLeftOf="@+id/editText_title"
         app:layout_constraintRight_toRightOf="@+id/editText_title"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/editText_title" />
+        tools:layout_constraintRight_creator="1" />
 
 </android.support.constraint.ConstraintLayout>
