--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:id="@+id/back"
         android:layout_width="0dp"
-        android:layout_height="260dp"
+        android:layout_height="280dp"
         android:layout_marginEnd="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
@@ -50,19 +50,32 @@
             android:ems="10"
             android:inputType="textPersonName" />
 
-        <Spinner
-            android:id="@+id/search_category"
-            android:layout_width="320dp"
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_marginLeft="15dp"
-            android:background="@android:drawable/btn_dropdown" />
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="10dp"
+            android:paddingEnd="20dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingStart="20dp"
+            android:paddingTop="14dp"
+            android:text="Wybierz śpiewnik:"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
 
         <Spinner
             android:id="@+id/search_place"
             android:layout_width="320dp"
             android:layout_height="45dp"
-            android:layout_margin="15dp"
-            android:background="@android:drawable/btn_dropdown" />
+            android:layout_marginBottom="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginStart="15dp" />
 
     </LinearLayout>
 
@@ -72,7 +85,7 @@
         android:layout_height="50dp"
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
-        android:layout_marginTop="114dp"
+        android:layout_marginTop="84dp"
         android:background="#5fcb34"
         android:text="Wyświetl"
         android:textColor="@android:color/white"
