--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -13,9 +13,11 @@
     <TableLayout
         android:id="@+id/tableLayout"
         android:layout_width="0dp"
-        android:layout_height="320dp"
+        android:layout_height="300dp"
+        android:layout_marginEnd="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="16dp"
         android:background="#f2f2f2"
         android:paddingLeft="5dp"
@@ -81,7 +83,7 @@
                 tools:layout_editor_absoluteY="360dp" />
 
             <Spinner
-                android:id="@+id/spinner2"
+                android:id="@+id/songbook"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:layout_weight="1"
@@ -224,7 +226,7 @@
     </TableLayout>
 
     <Button
-        android:id="@+id/button_add"
+        android:id="@+id/button_update"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginEnd="100dp"
@@ -233,7 +235,23 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="15dp"
         android:background="#5fcb34"
-        android:text="Dodaj"
+        android:text="Zaktualizuj"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
+
+    <Button
+        android:id="@+id/button_cancel"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp"
+        android:layout_marginTop="76dp"
+        android:background="#5fcb34"
+        android:text="Anuluj"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintHorizontal_bias="0.0"
