--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -23,56 +23,38 @@
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1">
 
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="10dp"
+            android:paddingStart="5dp"
+            android:paddingTop="10dp"
+            android:text="Podaj tytuł:"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
+
         <EditText
             android:id="@+id/title_filter"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginEnd="15dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="15dp"
             android:ems="10"
             android:inputType="textPersonName" />
 
-        <TableLayout
+        <Spinner
+            android:id="@+id/search_place"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <Spinner
-                    android:id="@+id/search_place"
-                    android:layout_width="185dp"
-                    android:layout_height="45dp"
-                    android:layout_marginBottom="15dp"
-                    android:layout_marginEnd="15dp"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginTop="5dp" />
-
-                <Button
-                    android:id="@+id/button_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="45dp"
-                    android:layout_marginTop="5dp"
-                    android:background="#5fcb34"
-                    android:text="Wyświetl"
-                    android:textColor="@android:color/white"
-                    android:textSize="16sp"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/back"
-                    tools:layout_constraintLeft_creator="1"
-                    tools:layout_constraintRight_creator="1"
-                    tools:layout_constraintTop_creator="1" />
-            </TableRow>
-
-        </TableLayout>
+            android:layout_height="40dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginStart="15dp" />
 
         <ListView
             android:id="@+id/listView"
