--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -12,8 +12,8 @@
         android:title="@string/title_add" />
 
     <item
-        android:id="@+id/action_info"
-        android:icon="@android:drawable/ic_menu_delete"
-        android:title="@string/title_info" />
+        android:id="@+id/action_songbooks"
+        android:icon="@android:drawable/ic_input_get"
+        android:title="@string/title_songbook" />
 
 </menu>
