--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#333333"
+    android:background="#f2f2f2"
     tools:context="com.example.ewelina.spisek.AddFragment"
-    tools:layout_editor_absoluteY="81dp"
-    tools:layout_editor_absoluteX="0dp">
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="81dp">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -40,7 +40,10 @@
                 android:layout_width="100dp"
                 android:layout_height="45dp"
                 android:layout_marginLeft="5dp"
-                android:padding="10dp"
+                android:paddingBottom="10dp"
+                android:paddingEnd="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="10dp"
                 android:text="Tytuł"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
@@ -73,7 +76,10 @@
                 android:layout_width="100dp"
                 android:layout_height="45dp"
                 android:layout_marginLeft="5dp"
-                android:padding="10dp"
+                android:paddingBottom="10dp"
+                android:paddingEnd="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="10dp"
                 android:text="Śpiewnik"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
@@ -104,7 +110,10 @@
                 android:layout_width="100dp"
                 android:layout_height="45dp"
                 android:layout_marginLeft="5dp"
-                android:padding="10dp"
+                android:paddingBottom="10dp"
+                android:paddingEnd="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="10dp"
                 android:text="Strona"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
@@ -137,7 +146,10 @@
                 android:layout_width="100dp"
                 android:layout_height="45dp"
                 android:layout_marginLeft="5dp"
-                android:padding="10dp"
+                android:paddingBottom="10dp"
+                android:paddingEnd="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="10dp"
                 android:text="Numer"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
@@ -170,7 +182,10 @@
                 android:layout_width="100dp"
                 android:layout_height="45dp"
                 android:layout_marginLeft="5dp"
-                android:padding="10dp"
+                android:paddingBottom="10dp"
+                android:paddingEnd="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="10dp"
                 android:text="Tekst"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
@@ -203,7 +218,10 @@
                 android:layout_width="100dp"
                 android:layout_height="45dp"
                 android:layout_marginLeft="5dp"
-                android:padding="10dp"
+                android:paddingBottom="10dp"
+                android:paddingEnd="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="10dp"
                 android:text="Akordy"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
