Nationalization created (added PL and EN)

--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -8,8 +8,6 @@
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="81dp">
 
-    <!-- TODO: Update blank fragment layout -->
-
     <TableLayout
         android:id="@+id/tableLayout"
         android:layout_width="0dp"
@@ -44,7 +42,7 @@
                 android:paddingEnd="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp"
-                android:text="Tytuł"
+                android:text="@string/title"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 tools:layout_editor_absoluteX="227dp"
@@ -80,7 +78,7 @@
                 android:paddingEnd="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp"
-                android:text="Śpiewnik"
+                android:text="@string/songbook"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 tools:layout_editor_absoluteX="227dp"
@@ -114,7 +112,7 @@
                 android:paddingEnd="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp"
-                android:text="Strona"
+                android:text="@string/page"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 tools:layout_editor_absoluteX="227dp"
@@ -150,7 +148,7 @@
                 android:paddingEnd="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp"
-                android:text="Numer"
+                android:text="@string/number"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 tools:layout_editor_absoluteX="227dp"
@@ -186,7 +184,7 @@
                 android:paddingEnd="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp"
-                android:text="Tekst"
+                android:text="@string/lyrics"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 tools:layout_editor_absoluteX="227dp"
@@ -222,7 +220,7 @@
                 android:paddingEnd="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp"
-                android:text="Akordy"
+                android:text="@string/chords"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 tools:layout_editor_absoluteX="227dp"
@@ -251,7 +249,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="15dp"
         android:background="#5fcb34"
-        android:text="Dodaj"
+        android:text="@string/btn_add"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintHorizontal_bias="0.0"
