--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -52,7 +52,7 @@
                     android:layout_height="42dp"
                     android:layout_marginBottom="5dp"
                     android:background="#5fcb34"
-                    android:text="Dodaj"
+                    android:text="@string/btn_add"
                     android:textColor="@android:color/white"
                     android:textSize="16sp"
                     app:layout_constraintHorizontal_bias="0.0"
