--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -44,7 +44,7 @@
                 android:paddingEnd="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp"
-                android:text="Tytuł"
+                android:text="@string/title"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 tools:layout_editor_absoluteX="227dp"
@@ -80,7 +80,7 @@
                 android:paddingEnd="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp"
-                android:text="Śpiewnik"
+                android:text="@string/songbook"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 tools:layout_editor_absoluteX="227dp"
@@ -114,7 +114,7 @@
                 android:paddingEnd="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp"
-                android:text="Strona"
+                android:text="@string/page"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 tools:layout_editor_absoluteX="227dp"
@@ -150,7 +150,7 @@
                 android:paddingEnd="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp"
-                android:text="Numer"
+                android:text="@string/number"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 tools:layout_editor_absoluteX="227dp"
@@ -186,7 +186,7 @@
                 android:paddingEnd="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp"
-                android:text="Tekst"
+                android:text="@string/lyrics"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 tools:layout_editor_absoluteX="227dp"
@@ -222,7 +222,7 @@
                 android:paddingEnd="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp"
-                android:text="Akordy"
+                android:text="@string/chords"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 tools:layout_editor_absoluteX="227dp"
@@ -251,7 +251,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="15dp"
         android:background="#5fcb34"
-        android:text="Zaktualizuj"
+        android:text="@string/btn_edit"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintHorizontal_bias="0.0"
@@ -267,7 +267,7 @@
         android:layout_marginRight="100dp"
         android:layout_marginTop="76dp"
         android:background="#5fcb34"
-        android:text="Anuluj"
+        android:text="@string/btn_cancel"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintHorizontal_bias="0.0"
